istio-security.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: default
spec:
  selector:
    matchLabels:
      app: house-price
  jwtRules:
  - issuer: "auth-service"
    jwks: |
      {"keys":[{"kty":"oct","k":"bXlfc3VwZXJfc2VjcmV0X2tleQ"}]} 
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: default
spec:
  selector:
    matchLabels:
      app: house-price
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
